# oakestra-cli

./: .gitattributes  .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: cli_go_artifacts.yml  pypi_publish.yml  python_codestyle_check.yml
docs/source/: apps.rst  conf.py  configuration.rst  development.rst  flops.rst  index.rst  installer.rst  services.rst  worker.rst
edgeiocli/: __init__.py  application.py  edgeio.json  job.py  main.py  service.py  token_helper.py  user.py
edgeiocli/html/: main.html
oak_cli/: main.py
oak_cli/addons/: main.py
oak_cli/ansible/: ansible.cfg  python_utils.py
oak_cli/apps/: auxiliary.py  common.py  main.py
oak_cli/args_parser/: main.py
oak_cli/clusters/: auxiliary.py  common.py  main.py
oak_cli/configuration/: addon_repos.py  auxiliary.py  common.py  core_vars.py  local_machine_purpose.py  main.py  main_oak_repo.py
oak_cli/docker/: common.py  main.py
oak_cli/evaluation/: auxiliary.py  common.py  graph_utils.py  machine.py  main.py  types.py
oak_cli/installer/: main.py
oak_cli/services/: auxiliary.py  common.py  main.py
oak_cli/utils/: common.py  styling.py  typer_augmentations.py  types.py
oak_cli/worker/: common.py  ctr.py  net_manager.py  node_engine.py
oak_go_cli/: go.mod  go.sum  install.ps1  install.sh  main.go  main_docs.go
oak_go_cli/cmd/: addon.go  addon_flops.go  application.go  cluster.go  colors.go  colors_windows.go  completions.go  configuration.go  doctor.go  generate_docs.go  install.go  root.go  service.go  uninstall.go  version.go  worker.go
oak_go_cli/docs/: oak.md  oak_addon.md  oak_addon_flops.md  oak_addon_flops_clear-registry.md  oak_addon_flops_mock-data.md  oak_addon_flops_project.md  oak_addon_flops_reset-database.md  oak_addon_flops_restart-management.md  oak_addon_flops_tracking.md  oak_api-docs.md  oak_application.md  oak_cluster.md  (+36 more)
(+213 files in other folders)
