[tool.poetry]
name = "edgeiocli"
version = "0.1.0"
description = "The first version of the EdgeIO CLI"
authors = ["danimair9 <danimair9@gmail.com>"]
packages = [
    { include = "edgeiocli" }
    ]
include = ["edgeiocli/user.py"]

[tool.poetry.scripts]
edgeiocli = "edgeiocli.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
requests = "^2.27.1"
PyJWT = "^2.3.0"
tabulate = "^0.8.9"
figlet = "^0.0.1"
pyfiglet = "^0.8.post1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
