[tool.poetry]
name = "oak_cli"
version = "0.3.0"
description = ""
authors = ["Alexander Malyuk <malyuk.alexander1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
argcomplete = "^3.2.3"
pydantic = "^2.6.4"
icecream = "^2.1.3"
typer = "^0.9.4"
rich = "^13.7.1"
oakestra_utils = { git = "https://github.com/oakestra/oakestra.git@develop", subdirectory = "libraries/oakestra_utils_library" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
oak = "oak_cli.main:main"

[tool.black]
line-length = 100
